this version can code that has a loto f synax errors for the pages that were added

--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,7 @@
     background: linear-gradient(
         rgba(34,34,34,0.7),
         rgba(34,34,34,0.7)
-      ), url('../img/bg/1.jpeg') no-repeat center center fixed;
+      ), url('img/fist_bump.jpg') no-repeat center center fixed;
     background-size: cover;
     background-position: center center;
     -webkit-background-size: cover;
@@ -36,7 +36,6 @@
     font-size: 60px;
     line-height: 56px;
     color: #fff;
-    margin-bottom: 20px;
   }
   h4 {
     font-family: 'Abhaya Libre', serif;
