--- a/collaborate1.0/assets/css/photo.css
+++ b/collaborate1.0/assets/css/photo.css
@@ -2387,7 +2387,7 @@ h3{
    Header Styles
    ========================================================================== */
 .login {
-  background: linear-gradient( rgba(34,34,34,0.7), rgba(34,34,34,0.7) ), url('../../img/bg/fist_bump.jpg') no-repeat center center fixed;
+  background: linear-gradient( rgba(34,34,34,0.7), rgba(34,34,34,0.7) ), url('../img/bg/fist_bump.jpg') no-repeat center center fixed;
   background-size: cover;
   background-position: center center;
   -webkit-background-size: cover;
